# Multi_algorithm_comparison_basic_version

./: .gitignore  CatBoost.py  DT.py  FRP筋UHPC粘结锚固数据.xlsx  GBR.py  KNN.py  LICENSE  LightGBM-optuna.py  MLP.py  README.md  RF.py  SVR.py  XGBoost.py  XGBoost_mealpy.py  bay.py  corr.py  database2.xlsx  database_encoded.xlsx  dataplot.py  distributeplot.py  elm.py  encode.py  fpr筋机器学习预处理.xlsx  fpr筋机器学习预处理cn.xlsx  index.html  model_best_params.txt  paras_read.py  plot.ipynb  pyproject.toml  runall.py  shap importance.emf  shap importance.tif  shap.opju  stack.py  tabm-autogluon.py  tabm_model_tool.py  tabm_reg.py  tabpfn_reg.py  test.py  test.xlsx  (+3 more)
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
xrfm/: __init__.py  tree_utils.py  xrfm.py
xrfm/rfm_src/: __init__.py  class_conversion.py  eigenpro.py  gpu_utils.py  kernel_log_reg.py  kernels.py  metrics.py  recursive_feature_machine.py  svd.py  utils.py
